fix alignment of skills

--- a/src/sections/about.module.scss
+++ b/src/sections/about.module.scss
@@ -1,5 +1,7 @@
 .skill {
   position: relative;
+  display: flex;
+  justify-content: center;
 }
 .caption {
   font-size: 14px;
